# tyranid-hive

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  READMEv2.md  __commit_msg.txt  alembic.ini  docker-compose.yml  install.sh  pyproject.toml  start.py  test_codex_env.py  test_e2e.py  一键拉起.bat  启动官方claude.bat  拉起claude.bat  拉起codex.bat
.github/workflows/: ci.yml
config/governance/: tyranid.yaml
config/seeds/: policy_seeds.yaml
config/synapses/: code-expert.yaml  evolution-master.yaml  finance-scout.yaml  overmind.yaml  research-analyst.yaml
dashboard/: index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.js  tailwind.config.ts  vite.config.ts
dashboard/e2e/: weather.spec.js
dashboard/src/: App.tsx  api.ts  index.css  useWebSocket.ts
demo/: run_demo.py  web_mission_e2e.spec.js
docs/: GAP_ANALYSIS.md  NEXT_STEPS.md  getting-started.md
docs/error-books/: _index.md  build-packaging.md  checklist-error-landing.md  common-mistakes.md  error-book-recorder.md  flow-code-habit.md  flow-design.md  flow-gate.md  flow-rules.md  git-worktree.md  interface-rules.md  streaming-runtime.md  tool-rules.md
migrations/: env.py
tests/: conftest.py  test_analyze_endpoint.py  test_api.py  test_api_extended.py  test_auto_crystallize.py  test_chain_runner.py  test_cli.py  test_cli_dispatch.py  test_cli_evolve.py  test_cli_genes.py  test_db_config.py  test_delete.py  test_depends_on.py  test_dispatcher_enrichment.py  test_dispatcher_progress.py  test_docker_config.py  test_event_bus.py  test_evolution_master.py  test_fitness.py  test_gene_loader.py  test_gene_patch.py  test_genes_api.py  test_labels.py  test_lesson_bump.py  test_lessons.py  test_middleware.py  test_missions_api.py  test_openclaw_adapter.py  test_pagination.py  test_playbook_usage.py  test_playbooks.py  test_search.py  test_sort.py  test_sse_stream.py  test_stall_detector.py  test_stats_overview.py  test_stats_timeline.py  test_subtasks.py  test_swarm_runner.py  test_task_state_machine.py  (+4 more)
(+119 files in other folders)
